Fiddling with navbar a bit
+definitions for default colours as variables
~navbar buttons are highlighted on mouse over
+borders for main page content (not sure if I should keep)

TODO: maek navbar nice (buttons aren't sized to fit the navbar)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <style>
+            :root {
+                --main-backgroud-color: #fef1d3;
+                --content-backgroud-color: #fff;
+                --content-text-color: #181818;
+                --navbar-backgroud-color: #cacaca;
+                --navbar-text-color: #181818;
+                --navbar-button-default-color: #cacaca;
+                --navbar-button-hover-color: #fff;
+            }
+        </style>
         <title>Hullo! o//</title>
     </head>
     <body>
@@ -11,11 +22,11 @@
         <header class="header">
             <nav class="navbar">
                 <ul>
-                    <li><a href="#about">About</a></li>
+                    <li><img src="profile-bubble.jpg" width="45px" height="45px" href="#about"></li>
                     <li><a href="#game-jams">Game Jams</a></li>
                     <li><a href="#school">Classwork</a></li>
                     <li><a href="#other">Other Bits</a></li>
-                    <li><a href="https://github.com/PD-2272835">Github</a></li>
+                    <li><a href="https://github.com/PD-2272835" target="_blank">Github</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,11 +36,11 @@
 
             </div>
         </section>
-        
+
         <main class="main">
             <section id="about">
-                <h3>About Me!</h3>
                 <div class="container">
+                    <h3>About Me!</h3>
                     <img src="profile-bubble.jpg" alt="What I look Like">
                     <p></p>
                 </div>
