yet more navbar stuff (mostly sync)
+Github logo svg added to navbar
~messing around with look of navbar & button highlighting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <style>
             :root {
-                --main-backgroud-color: #fef1d3;
+                --main-backgroud-color: #ededed;
                 --content-backgroud-color: #fff;
                 --content-text-color: #181818;
                 --navbar-backgroud-color: #cacaca;
@@ -18,18 +18,15 @@
         <title>Hullo! o//</title>
     </head>
     <body>
-
-        <header class="header">
-            <nav class="navbar">
-                <ul>
-                    <li><img src="profile-bubble.jpg" width="45px" height="45px" href="#about"></li>
-                    <li><a href="#game-jams">Game Jams</a></li>
-                    <li><a href="#school">Classwork</a></li>
-                    <li><a href="#other">Other Bits</a></li>
-                    <li><a href="https://github.com/PD-2272835" target="_blank">Github</a></li>
-                </ul>
-            </nav>
-        </header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#about"><img src="profile-bubble.jpg" width="100px" height="100px"></a></li>
+                <li><a href="#game-jams"><h2>Game Jams</h2></a></li>
+                <li><a href="#school"><h2>Classwork</h2></a></li>
+                <li><a href="#other"><h2>Other Bits</h2></a></li>
+                <li><a href="https://github.com/PD-2272835" target="_blank"><img src="github-mark-white.svg"></a></li>
+            </ul>
+        </nav>
 
         <section class="hero">
             <div class="container">
@@ -38,23 +35,27 @@
         </section>
 
         <main class="main">
+
             <section id="about">
                 <div class="container">
                     <h3>About Me!</h3>
                     <img src="profile-bubble.jpg" alt="What I look Like">
-                    <p></p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </section>
+
             <section id="game-jams">
                 <div class="container">
                     <h3>Game Jams</h3>
                 </div>
             </section>
+
             <section id="school">
                 <div class="container">
                     <h3>Uni + College projects</h3>
                 </div>
             </section>
+
             <section id="other">
                 <div class="container">
                     <h3>Other Tinkerings...</h3>
