Wealth of style changes
Mostly style changes
Changed main font to Google's "Lexend" (will need to find suitable backup fonts)
Profile bubble sizing now handled by stylesheet
Vertical scrollbar should now be hidden on most browser types
Profile + Github images are now a round bubble
Main page content now centered
Padding adjusted on navbar links

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link href='https://fonts.googleapis.com/css?family=Lexend' rel='stylesheet'>
         <link rel="stylesheet" href="style.css">
         <style>
             :root {
@@ -20,7 +21,7 @@
     <body>
         <nav class="navbar">
             <ul>
-                <li><a href="#about"><img src="profile-bubble.jpg" width="100px" height="100px"></a></li>
+                <li><a href="#about"><img src="profile-bubble.jpg"></a></li>
                 <li><a href="#game-jams"><h2>Game Jams</h2></a></li>
                 <li><a href="#school"><h2>Classwork</h2></a></li>
                 <li><a href="#other"><h2>Other Bits</h2></a></li>
