--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </nav>
 
         <section class="hero">
-            <div class="container">
-
+            <div class="hero-text">
+                <h1>Hullo there</h1>
             </div>
         </section>
 
